@@ -1,3 +1,9 @@
+2013-01-13  Andy Buckley  <andy.buckley@cern.ch>
+
+	* Add src/Paths.cc to avoid circular header dependencies.
+
+	* Add LHAPDF_{INSTALL,DATA}_PREFIX variables and PwdInSearchPath config flag, and use them in search path determination.
+
 2013-01-11  Andy Buckley  <andy.buckley@cern.ch>
 
 	* Start of the AlphaS refactoring.
